Exercicios da faculdade
Resolvendo Exercicios da cadeira de Programacao web

--- a/Exercicios faculdade/Ex001/index.html
+++ b/Exercicios faculdade/Ex001/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meu primeiro Exercicio</title>
 </head>
 <body>
-    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In earum repellat, sapiente voluptas veniam aspernatur neque, ipsum tempore aliquam quam debitis possimus atque aperiam itaque vel iste pariatur cumque enim.</h1>
+    <h1>Ola Mundo</h1>
+    <hr>
+    <p>Este e meu primeiro documento HTML! Estou muito feliz!</p>
+    <p>Este e um momento unico! Estou criando um site!</p>
 </body>
 </html>
