--- a/Exercicios faculdade/Ex004/Pesquisa.html
+++ b/Exercicios faculdade/Ex004/Pesquisa.html
@@ -24,6 +24,7 @@
     </style>
 </head>
 <body>
+    <h1>pesquisa</h1>
     <form action="Pesquisa.html">
         <input type="search" name="pesquisa" id="p" placeholder="search..">
     </form>
