--- a/Exercicios faculdade/Ex005/Exer7.html
+++ b/Exercicios faculdade/Ex005/Exer7.html
@@ -28,6 +28,10 @@
             margin-bottom: 5px;
         }
 
+        input:active{
+            background-color: yellow;
+        }
+
         #submit{
             background-color: green;
             color: white;
@@ -56,7 +60,7 @@
          <input type="text" placeholder="Seu nome.."><br>
          <label for="lastname">Ultimo nome</label><br>
          <input type="text" placeholder="Seu Apelido.."><br>
-         <label for="coutry">Pais</label><br>
+         <label for="coutri">Pais</label><br>
          <select name="Paises" id="p">
             <option value="p">Mocambique</option>
             <option value="p">Africa do sul</option>
