--- a/GestorBanca2.0/Cadastro_Produto.html
+++ b/GestorBanca2.0/Cadastro_Produto.html
@@ -91,9 +91,9 @@
 
                 <label for="categoria">Categoria</label><br>
                 <select name="categoria" id="categoria">
-                    <option value="categoria1">Categoria 1</option>
-                    <option value="categoria2">Categoria 2</option>
-                    <option value="categoria3">Categoria 3</option>
+                    <option value="categoria1">Comestivel</option>
+                    <option value="categoria2">Frescos</option>
+                    <option value="categoria3">Produtos de Limpeza</option>
                 </select><br>
 
                 <label for="preco">Preço</label><br>
