--- a/GestorBanca2.0/index.html
+++ b/GestorBanca2.0/index.html
@@ -1,11 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
+        body{
+            font-family: 'Arial', Helvetica, sans-serif;
+            background: linear-gradient(to bottom right, #e0e0e0, #ffffff);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .codigo{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 350px;
+            height: 350px;
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 15px;
+            padding: 20px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+        }
+
+        .codigo h2 {
+            margin-bottom: 20px;
+            font-size: 24px;
+            color: #333;
+        }
+
+        .codigo form input, .codigo form button {
+            width: 100%;
+            height: 40px;
+            margin-bottom: 15px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            padding: 0 10px;
+            font-size: 16px;
+        }
+
+        .codigo form input {
+            border: 1px solid #ddd;
+            background-color: #f9f9f9;
+        }
+
+        .codigo form input:focus {
+            outline: none;
+            border-color: #4CAF50;
+        }
+
+        .codigo form button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .codigo form button:hover {
+            background-color: #45a049;
+        }
+
+        .codigo p {
+            font-size: 14px;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="codigo">
+        <h2>Área de Login</h2>
+        <form action="index.html">
+            <input type="number" placeholder="Digite o código de acesso...">
+            <button type="submit">Entrar</button>
+        </form>
+    </div>
 </body>
 </html>
