--- a/GestorBanca2.0/dividas.html
+++ b/GestorBanca2.0/dividas.html
@@ -213,6 +213,8 @@
         </div>
     </div>
 
+    <p id="Produto" style="text-align: center;"></p>
+
     <table>
         <thead>
             <tr>
