--- a/GestorBanca2.0/index.html
+++ b/GestorBanca2.0/index.html
@@ -81,10 +81,12 @@
 <body>
     <div class="codigo">
         <h2>Área de Login</h2>
-        <form action="index.html">
-            <input type="number" placeholder="Digite o código de acesso...">
+        <form id="loginForm">
+            <input type="number" id="codigo" placeholder="Digite o código de acesso...">
             <button type="submit">Entrar</button>
         </form>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
