--- a/GestorBanca2.0/menu.html
+++ b/GestorBanca2.0/menu.html
@@ -77,8 +77,8 @@
         <a href="vender.html">Vender</a>
         <a href="dividas.html">Dívidas</a>
         <a href="Painel.html">Painel</a>
-        <a href="inventario.html">Inventário</a>
-        <a href="Cadastro_Produto.html">Cadastro</a>
+        <a href="invetario.html">Inventário</a>
+        <a href="https://docs.google.com/spreadsheets/d/126_nvJJ6-QfKP93g3VHolu7TWhMX6MM5HMRek6jRnxE/edit?usp=sharing" target="_blank">Cadastro</a>
     </nav>
 
     <h1>ACFF</h1>
